<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/clear_all_fav_menu"
        android:tooltipText="Clear All Favs"
        android:orderInCategory="104"
        android:title="@string/clear_all_fav_menu_title"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/show_fav_menu"
        android:tooltipText="Show Favs"
        android:orderInCategory="102"
        android:title="@string/show_fav_menu_title"
        android:visible="false"
        app:showAsAction="never" />


    <item
        android:id="@+id/refresh_menu"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:orderInCategory="101"
        android:title="@string/refresh_menu_title"
        android:visible="false"
        app:showAsAction="never" />


    <item android:id="@+id/search_menu"
        android:title="@string/search_menu_title"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />


    <item android:id="@+id/cancel_menu"
        android:title="@string/cancel_menu_title"
        android:icon="@drawable/ic_baseline_cancel_24"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:visible="false"
        />


</menu>